[build-system]
requires = ["setuptools", "Pillow>=10.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Imagenes grises"
version = "0.0.1"
description = "La biblioteca que ayuda a comprimir y redimensionar imágenes"
authors = [
    {name="Huberth Perez", email="huberth16@gmail.com"},
    ]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/huberth16/PF_HPV"
